# podforge

./: .gitignore  PLAN.md  README.md  pyproject.toml
podforge/: __main__.py  cli.py  pipeline.py
podforge/audio/: effects.py  mixer.py  music.py
podforge/extract/: pdf.py  text.py  url.py
podforge/output/: metadata.py  transcript.py
podforge/script/: generator.py  prompts.py
podforge/tts/: base.py  edge.py  elevenlabs.py  openai.py
site/: index.html
tests/: test_cli.py  test_extract.py  test_metadata.py  test_script.py  test_transcript.py  test_tts.py
web/: app.py
